// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button basic 1`] = `
<button
  class="ant-btn"
  type="button"
>
  <span>
    test
  </span>
</button>
`;

exports[`button button click, has lastAction.final 1`] = `
<button
  class="ant-btn"
  type="button"
>
  <span>
    按 钮
  </span>
</button>
`;

exports[`button button click, has lastAction.final 2`] = `
<button
  class="ant-btn"
  type="button"
>
  <span>
    按 钮
  </span>
</button>
`;

exports[`button button click, no lastAction.final 1`] = `
<button
  class="ant-btn"
  type="button"
>
  <span>
    按 钮
  </span>
</button>
`;
